src/test/deca/context/valid/sansObjet/AssignSimple.deca
// Description:
//   Assign d'un literal à un entier
//
// Resultats:
//
//
// Historique:
//    cree le 14/01/2020

{
      //float x;
      //x = 5;
      float ab;
      ab = 35;
}
