src/test/deca/context/invalid/sansObjet/AssignString.deca
// Description:
//   Assign d'une chaine de caractère
//
// Resultats:
//
//
// Historique:
//    cree le 14/01/2020

{
      string chaine;
      chiane = "chine à définir";
}
